[package]
name = "ai-ark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-ark"
path = "src/main.rs"

# Separate binary for testing (not built for wasm32-wasip2)
[[bin]]
name = "test_run"
path = "test_run.rs"
required-features = ["test-runner"]

[dependencies]
# Core dependencies for WASM component
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasi-http-client = "0.2"

# Test runner dependencies (only for native builds)
wasmtime = { version = "27", features = ["component-model", "async"], optional = true }
wasmtime-wasi = { version = "27", optional = true }
wasmtime-wasi-http = { version = "27", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
anyhow = { version = "1.0", optional = true }

[features]
test-runner = ["wasmtime", "wasmtime-wasi", "wasmtime-wasi-http", "tokio", "anyhow"]

[profile.release]
opt-level = "z"
lto = true
strip = true
